# ferryman-mcp

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  STATUS.md  build.gradle.kts  detekt.yml  gradle.properties  promptfooconfig.yaml  pyproject.toml  settings.gradle.kts
.github/workflows/: ci.yml  eval-harness.yml
docs/plans/: chess-lichess-curation.md  eval-harness.md  ferryman-repo-creation.md  openclaw-repo-creation.md  zai-glm-provider-addendum.md
eval_harness/: README.md  __init__.py  __main__.py  chess_scorers.py  invoke.py  judge_scorer.py  pricing.json  promptfoo_assert.py  promptfoo_tests.py  rubric-chess.md  rubric.md  rule_scorers.py  run_scorecard.py  score_litert_outputs.py  scorecard-chess.json  scorecard-chess.md  scorecard.json  scorecard.md  tag_derivation.py
eval_harness/golden/: CHESS_GOLDEN_LICENSE.txt  approval.json  chess_golden.json  golden_set.json
eval_harness/tests/: test_chess_scorers.py  test_invoke.py  test_judge_consistency.py  test_rule_scorers.py  test_run_scorecard.py  test_score_litert_outputs.py  test_tag_derivation.py
ferryman/: config.toml
ferryman/skills/chess-opening-coach/: SKILL.md
ferryman/skills/chess-opening-coach/corpus/: concepts.md
ferryman/skills/company-role-research/: SKILL.md
ferryman/skills/hello-repo/: SKILL.md
src/main/kotlin/dev/openclaw/ferryman/: Main.kt
src/main/kotlin/dev/openclaw/ferryman/channels/: HttpServer.kt  TelegramBot.kt  TelegramCommand.kt
src/main/kotlin/dev/openclaw/ferryman/config/: ConfigLoader.kt
src/main/kotlin/dev/openclaw/ferryman/host/: McpConfigParser.kt  McpHost.kt  Transport.kt
src/main/kotlin/dev/openclaw/ferryman/logging/: RoutingLogger.kt
src/main/kotlin/dev/openclaw/ferryman/memory/: MemoryStore.kt
src/main/kotlin/dev/openclaw/ferryman/orchestrator/: Orchestrator.kt
src/main/kotlin/dev/openclaw/ferryman/providers/: AnthropicProvider.kt  LlmProvider.kt  OpenAiCompatibleProvider.kt  ProviderRegistry.kt
src/main/kotlin/dev/openclaw/ferryman/skills/: SkillLoader.kt
src/test/kotlin/dev/openclaw/ferryman/channels/: HttpServerTest.kt  TelegramCommandParserTest.kt
src/test/kotlin/dev/openclaw/ferryman/config/: ConfigLoaderTest.kt
src/test/kotlin/dev/openclaw/ferryman/host/: McpConfigParserTest.kt  StreamableHttpTransportTest.kt
src/test/kotlin/dev/openclaw/ferryman/logging/: RoutingLoggerTest.kt
src/test/kotlin/dev/openclaw/ferryman/memory/: MemoryStoreTest.kt
src/test/kotlin/dev/openclaw/ferryman/orchestrator/: OrchestratorTest.kt
src/test/kotlin/dev/openclaw/ferryman/providers/: OpenAiCompatibleProviderTest.kt
src/test/kotlin/dev/openclaw/ferryman/skills/: SkillLoaderTest.kt
