[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ferryman-eval-harness"
version = "0.1.0"
description = "Eval harness for ferryman skills — rule-based and LLM-judge scorers over a human-authored golden set."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["mcp-server-fetch>=2026.7.10"]

# Explicit package config — golden/ and judge/ are data dirs (JSON + Markdown),
# not importable Python packages. Only eval_harness/ (with its __init__.py) is.
[tool.setuptools]
packages = ["eval_harness"]

[tool.setuptools.package-data]
eval_harness = ["golden/*.json", "rubric.md"]

[project.optional-dependencies]
# promptfoo: the ALTERNATIVE runner (the primary runner is run_scorecard.py, what
# CI runs). The PyPI `promptfoo` package is a thin wrapper that shells out to the
# Node CLI (`npx promptfoo`), so it still requires Node.js 20+. If you already
# have Node.js, prefer `npx promptfoo@latest` directly (no pip install needed).
# NOTE: promptfoo's real versioning is on npm (0.105+); the PyPI wrapper tops out
# at 0.1.4, so we pin the wrapper, not the npm version.
promptfoo = ["promptfoo>=0.1.4"]
# braintrust: the alternative backend, chosen if you want hosted dataset versioning
# and experiment comparison. Requires a BRAINTRUST_API_KEY.
braintrust = ["braintrust>=0.0.150"]
# judge scorer dependencies — the OpenAI-compatible client for the judge model.
judge = ["httpx>=0.27"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
testpaths = ["eval_harness/tests"]
asyncio_mode = "auto"
