[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ferryman-eval-harness"
version = "0.1.0"
description = "Eval harness for ferryman skills — rule-based and LLM-judge scorers over a human-authored golden set."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["mcp-server-fetch>=2026.7.10"]

# Explicit package config — golden/ and judge/ are data dirs (JSON + Markdown),
# not importable Python packages. Only eval_harness/ (with its __init__.py) is.
[tool.setuptools]
packages = ["eval_harness"]

[tool.setuptools.package-data]
eval_harness = ["golden/*.json", "rubric.md"]

[project.optional-dependencies]
# Install only what you need; the harness degrades gracefully if optional deps
# are absent (see invoke.py).
# judge scorer dependencies — the OpenAI-compatible client for the judge model.
judge = ["httpx>=0.27"]
# chess reason-faithfulness scorer — derives the deterministic tags a Move Coach
# prompt would hand the model (capture/develops/center-control/…) from a FEN +
# UCI move, so the chess-opening-coach skill can be scored on whether its
# explanation stays faithful to those tags. python-chess is pure Python (no
# native deps); the scorer degrades gracefully (records a skip) if absent, the
# same way the judge degrades when httpx is missing.
chess = ["python-chess>=1.999"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
testpaths = ["eval_harness/tests"]
asyncio_mode = "auto"
